--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Ogayon, Aron Gabriel L.
+description: Works of Aron Gabriel Ogayon for CSST101
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
